--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,6 +46,25 @@ services:
       NEWS_API_FALLBACK_URLS: "http://host.docker.internal:8000,http://172.17.0.1:8000,http://localhost:8000"
       # Processing settings
       MAX_WORKERS: 4 # Number of parallel workers for processing
+      # Gemini API settings
+      GEMINI_API_KEY: ${GEMINI_API_KEY:-YOUR_API_KEY_HERE}
+      GEMINI_EMBEDDING_MODEL: ${GEMINI_EMBEDDING_MODEL:-text-embedding-004}
+      GEMINI_EMBEDDING_TASK_TYPE: ${GEMINI_EMBEDDING_TASK_TYPE:-CLUSTERING}
+      GEMINI_EMBEDDING_INPUT_TOKEN_LIMIT: ${GEMINI_EMBEDDING_INPUT_TOKEN_LIMIT:-2048}
+      GEMINI_EMBEDDING_OUTPUT_DIMENSION: ${GEMINI_EMBEDDING_OUTPUT_DIMENSION:-768}
+      # Python path for Google imports
+      PYTHONPATH: /app
+      # Debug flag for imports
+      PYTHONDEBUG: "1"
+      # Add any proxy settings if needed
+      # HTTP_PROXY: ${HTTP_PROXY:-}
+      # HTTPS_PROXY: ${HTTPS_PROXY:-}
+      # Flash model settings
+      GEMINI_FLASH_MODEL: ${GEMINI_FLASH_MODEL:-gemini-2.0-flash}
+      GEMINI_INPUT_CONTEXT_WINDOW_TOKEN: ${GEMINI_INPUT_CONTEXT_WINDOW_TOKEN:-1048576}
+      GEMINI_FLASH_OUTPUT_WINDOW_TOKEN: ${GEMINI_FLASH_OUTPUT_WINDOW_TOKEN:-8192}
+      GEMINI_FLASH_RATE_LIMIT_PER_MINUTE: ${GEMINI_FLASH_RATE_LIMIT_PER_MINUTE:-15}
+      GEMINI_FLASH_RATE_LIMIT_PER_DAY: ${GEMINI_FLASH_RATE_LIMIT_PER_DAY:-1500}
       # Debugging options
       LOG_LEVEL: INFO
       # Polling interval
@@ -103,6 +122,25 @@ services:
       READER_DB_NAME: reader_db
       READER_DB_USER: postgres
       READER_DB_PASSWORD: postgres
+      # Gemini API settings
+      GEMINI_API_KEY: ${GEMINI_API_KEY:-YOUR_API_KEY_HERE}
+      GEMINI_EMBEDDING_MODEL: ${GEMINI_EMBEDDING_MODEL:-text-embedding-004}
+      GEMINI_EMBEDDING_TASK_TYPE: ${GEMINI_EMBEDDING_TASK_TYPE:-CLUSTERING}
+      GEMINI_EMBEDDING_INPUT_TOKEN_LIMIT: ${GEMINI_EMBEDDING_INPUT_TOKEN_LIMIT:-2048}
+      GEMINI_EMBEDDING_OUTPUT_DIMENSION: ${GEMINI_EMBEDDING_OUTPUT_DIMENSION:-768}
+      # Python path for Google imports
+      PYTHONPATH: /app
+      # Debug flag for imports
+      PYTHONDEBUG: "1"
+      # Add any proxy settings if needed
+      # HTTP_PROXY: ${HTTP_PROXY:-}
+      # HTTPS_PROXY: ${HTTPS_PROXY:-}
+      # Flash model settings
+      GEMINI_FLASH_MODEL: ${GEMINI_FLASH_MODEL:-gemini-2.0-flash}
+      GEMINI_INPUT_CONTEXT_WINDOW_TOKEN: ${GEMINI_INPUT_CONTEXT_WINDOW_TOKEN:-1048576}
+      GEMINI_FLASH_OUTPUT_WINDOW_TOKEN: ${GEMINI_FLASH_OUTPUT_WINDOW_TOKEN:-8192}
+      GEMINI_FLASH_RATE_LIMIT_PER_MINUTE: ${GEMINI_FLASH_RATE_LIMIT_PER_MINUTE:-15}
+      GEMINI_FLASH_RATE_LIMIT_PER_DAY: ${GEMINI_FLASH_RATE_LIMIT_PER_DAY:-1500}
       WAIT_FOR_DB: "true"
       WAIT_SECONDS: "10"
     depends_on:
