--- a/requirements.txt
+++ b/requirements.txt
@@ -30,5 +30,10 @@ sentencepiece==0.2.0
 # Add protobuf for potential compatibility issues with transformers/torch
 protobuf==4.25.3
 
+# Clustering dependencies
+hdbscan==0.8.36  # Density-based hierarchical clustering
+scikit-learn==1.3.2  # For preprocessing and vectorization
+pandas==2.2.0  # Data manipulation for clustering
+
 # Consider adding accelerate for potential performance improvements
 # accelerate==0.30.0 
