--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,16 +52,37 @@ services:
       GEMINI_EMBEDDING_INPUT_TOKEN_LIMIT: ${GEMINI_EMBEDDING_INPUT_TOKEN_LIMIT:-2048}
       GEMINI_EMBEDDING_OUTPUT_DIMENSION: ${GEMINI_EMBEDDING_OUTPUT_DIMENSION:-768}
       GEMINI_EMBEDDING_RATE_LIMIT_PER_MINUTE: ${GEMINI_EMBEDDING_RATE_LIMIT_PER_MINUTE:-1500}
+
+      # --- Gemini Generation Models --- #
+      # Shared limits
+      GEMINI_GEN_INPUT_TOKEN_LIMIT: ${GEMINI_GEN_INPUT_TOKEN_LIMIT:-1048576}
+      GEMINI_GEN_OUTPUT_TOKEN_LIMIT: ${GEMINI_GEN_OUTPUT_TOKEN_LIMIT:-8192}
+      # Model: gemini-2.0-flash (Default)
+      GEMINI_FLASH_MODEL: ${GEMINI_FLASH_MODEL:-models/gemini-2.0-flash}
+      GEMINI_FLASH_RPM: ${GEMINI_FLASH_RPM:-15}
+      GEMINI_FLASH_TPM: ${GEMINI_FLASH_TPM:-1000000}
+      GEMINI_FLASH_RPD: ${GEMINI_FLASH_RPD:-1500}
+      # Model: gemini-2.0-flash-thinking-exp-01-21
+      GEMINI_FLASH_THINKING_MODEL: ${GEMINI_FLASH_THINKING_MODEL:-models/gemini-2.0-flash-thinking-exp-01-21}
+      GEMINI_FLASH_THINKING_RPM: ${GEMINI_FLASH_THINKING_RPM:-10}
+      GEMINI_FLASH_THINKING_TPM: ${GEMINI_FLASH_THINKING_TPM:-4000000}
+      GEMINI_FLASH_THINKING_RPD: ${GEMINI_FLASH_THINKING_RPD:-1500}
+      # Model: gemini-2.0-flash-exp
+      GEMINI_FLASH_EXP_MODEL: ${GEMINI_FLASH_EXP_MODEL:-models/gemini-2.0-flash-exp}
+      GEMINI_FLASH_EXP_RPM: ${GEMINI_FLASH_EXP_RPM:-10}
+      GEMINI_FLASH_EXP_TPM: ${GEMINI_FLASH_EXP_TPM:-1000000}
+      GEMINI_FLASH_EXP_RPD: ${GEMINI_FLASH_EXP_RPD:-1500}
+      # Model: gemini-2.0-flash-lite (Fallback)
+      GEMINI_FLASH_LITE_MODEL: ${GEMINI_FLASH_LITE_MODEL:-models/gemini-2.0-flash-lite}
+      GEMINI_FLASH_LITE_RPM: ${GEMINI_FLASH_LITE_RPM:-30}
+      GEMINI_FLASH_LITE_TPM: ${GEMINI_FLASH_LITE_TPM:-1000000}
+      GEMINI_FLASH_LITE_RPD: ${GEMINI_FLASH_LITE_RPD:-1500}
+
+      # --- Other Settings --- #
       # Python path for Google imports
       PYTHONPATH: /app
       # Debug flag for imports
       PYTHONDEBUG: "1"
-      # Flash model settings
-      GEMINI_FLASH_MODEL: ${GEMINI_FLASH_MODEL:-gemini-2.0-flash}
-      GEMINI_INPUT_CONTEXT_WINDOW_TOKEN: ${GEMINI_INPUT_CONTEXT_WINDOW_TOKEN:-1048576}
-      GEMINI_FLASH_OUTPUT_WINDOW_TOKEN: ${GEMINI_FLASH_OUTPUT_WINDOW_TOKEN:-8192}
-      GEMINI_FLASH_RATE_LIMIT_PER_MINUTE: ${GEMINI_FLASH_RATE_LIMIT_PER_MINUTE:-15}
-      GEMINI_FLASH_RATE_LIMIT_PER_DAY: ${GEMINI_FLASH_RATE_LIMIT_PER_DAY:-1500}
       # Local NLP Settings (Step 1.7)
       RUN_STEP_1_7: ${RUN_STEP_1_7:-true}
       LOCAL_NLP_MODEL: ${LOCAL_NLP_MODEL:-"facebook/bart-large-cnn"}
@@ -163,6 +184,12 @@ services:
       # Gemini API settings (also pass to backend if needed for future use)
       GEMINI_API_KEY: ${GEMINI_API_KEY:-YOUR_API_KEY_HERE}
       GEMINI_EMBEDDING_MODEL: ${GEMINI_EMBEDDING_MODEL:-models/text-embedding-004}
+      GEMINI_EMBEDDING_RATE_LIMIT_PER_MINUTE: ${GEMINI_EMBEDDING_RATE_LIMIT_PER_MINUTE:-1500}
+      # Generation Models (Main and Fallback might be useful)
+      GEMINI_FLASH_MODEL: ${GEMINI_FLASH_MODEL:-models/gemini-2.0-flash}
+      GEMINI_FLASH_RPM: ${GEMINI_FLASH_RPM:-15}
+      GEMINI_FLASH_LITE_MODEL: ${GEMINI_FLASH_LITE_MODEL:-models/gemini-2.0-flash-lite}
+      GEMINI_FLASH_LITE_RPM: ${GEMINI_FLASH_LITE_RPM:-30}
       # Python path for Google imports
       PYTHONPATH: /app
       # Wait settings
