completed basic step3

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -100,6 +100,10 @@ services:
       INTERPRET_CLUSTERS: ${INTERPRET_CLUSTERS:-true}
       MAX_CLUSTERS_TO_INTERPRET: ${MAX_CLUSTERS_TO_INTERPRET:-10}
       CLUSTER_SAMPLE_SIZE: ${CLUSTER_SAMPLE_SIZE:-10}
+      # Step 3: Entity Extraction settings
+      RUN_STEP3: ${RUN_STEP3:-true}
+      ENTITY_EXTRACTION_BATCH_SIZE: ${ENTITY_EXTRACTION_BATCH_SIZE:-10}
+      ENTITY_MAX_PRIORITY_ARTICLES: ${ENTITY_MAX_PRIORITY_ARTICLES:-100}
       # Hotness calculation factors
       RECENCY_DAYS: ${RECENCY_DAYS:-3}
       CALCULATE_TOPIC_RELEVANCE: ${CALCULATE_TOPIC_RELEVANCE:-true}
@@ -190,6 +194,10 @@ services:
       GEMINI_FLASH_RPM: ${GEMINI_FLASH_RPM:-15}
       GEMINI_FLASH_LITE_MODEL: ${GEMINI_FLASH_LITE_MODEL:-models/gemini-2.0-flash-lite}
       GEMINI_FLASH_LITE_RPM: ${GEMINI_FLASH_LITE_RPM:-30}
+      # Step 3: Entity Extraction settings
+      RUN_STEP3: ${RUN_STEP3:-true}
+      ENTITY_EXTRACTION_BATCH_SIZE: ${ENTITY_EXTRACTION_BATCH_SIZE:-10}
+      ENTITY_MAX_PRIORITY_ARTICLES: ${ENTITY_MAX_PRIORITY_ARTICLES:-100}
       # Python path for Google imports
       PYTHONPATH: /app
       # Wait settings
