done with step 4

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -86,7 +86,7 @@ services:
       # Debug flag for imports
       PYTHONDEBUG: "1"
       # Local NLP Settings (Step 1.7)
-      RUN_STEP_1_7: ${RUN_STEP_1_7:-true}
+      RUN_STEP_1_7: ${RUN_STEP_1_7:-false}
       LOCAL_NLP_MODEL: ${LOCAL_NLP_MODEL:-"facebook/bart-large-cnn"}
       MAX_SUMMARY_TOKENS: ${MAX_SUMMARY_TOKENS:-512}
       MIN_SUMMARY_TOKENS: ${MIN_SUMMARY_TOKENS:-150}
@@ -103,7 +103,7 @@ services:
       MAX_CLUSTERS_TO_INTERPRET: ${MAX_CLUSTERS_TO_INTERPRET:-10}
       CLUSTER_SAMPLE_SIZE: ${CLUSTER_SAMPLE_SIZE:-10}
       # Step 3: Entity Extraction settings
-      RUN_STEP3: ${RUN_STEP3:-true}
+      RUN_STEP3: ${RUN_STEP3:-false}
       ENTITY_EXTRACTION_BATCH_SIZE: ${ENTITY_EXTRACTION_BATCH_SIZE:-10}
       ENTITY_MAX_PRIORITY_ARTICLES: ${ENTITY_MAX_PRIORITY_ARTICLES:-100}
       CALCULATE_INFLUENCE_SCORES: ${CALCULATE_INFLUENCE_SCORES:-true}
@@ -206,7 +206,7 @@ services:
       # Rate limit wait settings for intelligent model selection
       GEMINI_MAX_WAIT_SECONDS: ${GEMINI_MAX_WAIT_SECONDS:-40}
       # Step 3: Entity Extraction settings
-      RUN_STEP3: ${RUN_STEP3:-true}
+      RUN_STEP3: ${RUN_STEP3:-false}
       ENTITY_EXTRACTION_BATCH_SIZE: ${ENTITY_EXTRACTION_BATCH_SIZE:-10}
       ENTITY_MAX_PRIORITY_ARTICLES: ${ENTITY_MAX_PRIORITY_ARTICLES:-100}
       CALCULATE_INFLUENCE_SCORES: ${CALCULATE_INFLUENCE_SCORES:-true}
