--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -87,8 +87,8 @@ services:
       PYTHONDEBUG: "1"
       # Step Execution Control
       RUN_PHASE_1_STEPS: ${RUN_PHASE_1_STEPS:-true} # Master switch for steps 1-4
-      RUN_STEP1: ${RUN_STEP1:-false} # Controls Step 1
-      RUN_STEP2: ${RUN_STEP2:-false} # Controls Step 2 (Clustering)
+      RUN_STEP1: ${RUN_STEP1:-true} # Controls Step 1
+      RUN_STEP2: ${RUN_STEP2:-true} # Controls Step 2 (Clustering)
       RUN_STEP3: ${RUN_STEP3:-true} # Controls Step 3 (Entity Extraction)
       RUN_STEP4: ${RUN_STEP4:-true} # Controls Step 4 (Data Export)
       # Local NLP Settings (Step 1.7 - Now always runs if Step 1 runs)
@@ -127,7 +127,7 @@ services:
       # Use skip-network-check to bypass Docker CLI checks
       FORCE_CONTINUE_ON_NETWORK_ERROR: "true"
     # Add the skip-network-check flag to avoid Docker introspection
-    command: ["python", "src/main.py", "--workers", "4"]
+    command: ["python", "src/main.py", "--workers", "8"]
     # Add GPU resource request
     deploy:
       resources:
