--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
     ports:
-      - "5433:5432" # Map to port 5433 externally to avoid conflicts with news-db
+      - "5433:5432" # Map to port 5433 externally to avoid conflicts with newsdb
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
@@ -86,7 +86,7 @@ services:
       # Debug flag for imports
       PYTHONDEBUG: "1"
       # Step Execution Control
-      RUN_PHASE_1_STEPS: ${RUN_PHASE_1_STEPS:-true} # Master switch for steps 1-4
+      RUN_PHASE_1_STEPS: ${RUN_PHASE_1_STEPS:-false} # Master switch for steps 1-4
       RUN_STEP1: ${RUN_STEP1:-true} # Controls Step 1
       RUN_STEP2: ${RUN_STEP2:-true} # Controls Step 2 (Clustering)
       RUN_STEP3: ${RUN_STEP3:-true} # Controls Step 3 (Entity Extraction)
