--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 # Database
-psycopg2-binary==2.9.9
+psycopg2-binary>=2.9.9
 
 # HTTP client
-requests==2.31.0
+requests>=2.31.0
 
 # Environment variables
-python-dotenv==1.0.0
+python-dotenv>=1.0.1
 
 # Command line parsing
 argparse==1.4.0
@@ -21,7 +21,7 @@ beautifulsoup4==4.13.3  # Latest stable version as of April 2024
 spacy==3.7.5  # Latest version compatible with Python 3.10 in Dockerfile 
 
 # AI and embeddings
-google-generativeai==0.7.1  # Google's Gemini API 
+google-generativeai>=0.7.2
 
 # Local NLP (Transformers)
 transformers==4.41.1
@@ -38,3 +38,8 @@ pandas==2.2.0  # Data manipulation for clustering
 
 # Consider adding accelerate for potential performance improvements
 # accelerate==0.30.0 
+
+# Haystack dependencies
+sentence-transformers>=3.0.1  # Added for Haystack ranker/embedder options
+google-ai-haystack==0.4.0     # Updated for Gemini integration (Plan version)
+pgvector-haystack==0.1.1      # Updated for Pgvector integration (Plan version) 
