--- a/requirements.txt
+++ b/requirements.txt
@@ -42,5 +42,5 @@ pandas==2.2.0  # Data manipulation for clustering
 # Haystack dependencies
 sentence-transformers>=3.0.1  # Added for Haystack ranker/embedder options
 haystack-ai>=2.0.0         # Core Haystack 2.x package
-haystack-integrations-google-ai>=0.3.0 # Correct package for Google AI components
+google-ai-haystack>=5.1.0  
 # pgvector-haystack==3.2.0      # No longer needed as we don't use PgvectorDocumentStore/Retriever 
