--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,25 +58,25 @@ services:
       GEMINI_GEN_INPUT_TOKEN_LIMIT: ${GEMINI_GEN_INPUT_TOKEN_LIMIT:-1048576}
       GEMINI_GEN_OUTPUT_TOKEN_LIMIT: ${GEMINI_GEN_OUTPUT_TOKEN_LIMIT:-8192}
       # Model: gemini-2.0-flash (Default)
-      GEMINI_FLASH_MODEL: ${GEMINI_FLASH_MODEL:-models/gemini-2.0-flash}
-      GEMINI_FLASH_RPM: ${GEMINI_FLASH_RPM:-15}
-      GEMINI_FLASH_TPM: ${GEMINI_FLASH_TPM:-1000000}
-      GEMINI_FLASH_RPD: ${GEMINI_FLASH_RPD:-1500}
+      GEMINI_FLASH_MODEL: ${GEMINI_FLASH_MODEL:-gemini-1.5-flash-latest}
+      # GEMINI_FLASH_RPM: ${GEMINI_FLASH_RPM:-15}
+      # GEMINI_FLASH_TPM: ${GEMINI_FLASH_TPM:-1000000}
+      # GEMINI_FLASH_RPD: ${GEMINI_FLASH_RPD:-1500}
       # Model: gemini-2.0-flash-thinking-exp-01-21
-      GEMINI_FLASH_THINKING_MODEL: ${GEMINI_FLASH_THINKING_MODEL:-models/gemini-2.0-flash-thinking-exp-01-21}
-      GEMINI_FLASH_THINKING_RPM: ${GEMINI_FLASH_THINKING_RPM:-10}
-      GEMINI_FLASH_THINKING_TPM: ${GEMINI_FLASH_THINKING_TPM:-4000000}
-      GEMINI_FLASH_THINKING_RPD: ${GEMINI_FLASH_THINKING_RPD:-1500}
+      GEMINI_FLASH_THINKING_MODEL: ${GEMINI_FLASH_THINKING_MODEL:-gemini-1.5-flash-latest}
+      # GEMINI_FLASH_THINKING_RPM: ${GEMINI_FLASH_THINKING_RPM:-10}
+      # GEMINI_FLASH_THINKING_TPM: ${GEMINI_FLASH_THINKING_TPM:-4000000}
+      # GEMINI_FLASH_THINKING_RPD: ${GEMINI_FLASH_THINKING_RPD:-1500}
       # Model: gemini-2.0-flash-exp
-      GEMINI_FLASH_EXP_MODEL: ${GEMINI_FLASH_EXP_MODEL:-models/gemini-2.0-flash-exp}
-      GEMINI_FLASH_EXP_RPM: ${GEMINI_FLASH_EXP_RPM:-10}
-      GEMINI_FLASH_EXP_TPM: ${GEMINI_FLASH_EXP_TPM:-1000000}
-      GEMINI_FLASH_EXP_RPD: ${GEMINI_FLASH_EXP_RPD:-1500}
+      # GEMINI_FLASH_EXP_MODEL: ${GEMINI_FLASH_EXP_MODEL:-models/gemini-2.0-flash-exp}
+      # GEMINI_FLASH_EXP_RPM: ${GEMINI_FLASH_EXP_RPM:-10}
+      # GEMINI_FLASH_EXP_TPM: ${GEMINI_FLASH_EXP_TPM:-1000000}
+      # GEMINI_FLASH_EXP_RPD: ${GEMINI_FLASH_EXP_RPD:-1500}
       # Model: gemini-2.0-flash-lite (Fallback)
-      GEMINI_FLASH_LITE_MODEL: ${GEMINI_FLASH_LITE_MODEL:-models/gemini-2.0-flash-lite}
-      GEMINI_FLASH_LITE_RPM: ${GEMINI_FLASH_LITE_RPM:-30}
-      GEMINI_FLASH_LITE_TPM: ${GEMINI_FLASH_LITE_TPM:-1000000}
-      GEMINI_FLASH_LITE_RPD: ${GEMINI_FLASH_LITE_RPD:-1500}
+      GEMINI_FLASH_LITE_MODEL: ${GEMINI_FLASH_LITE_MODEL:-gemini-1.5-flash-latest}
+      # GEMINI_FLASH_LITE_RPM: ${GEMINI_FLASH_LITE_RPM:-30}
+      # GEMINI_FLASH_LITE_TPM: ${GEMINI_FLASH_LITE_TPM:-1000000}
+      # GEMINI_FLASH_LITE_RPD: ${GEMINI_FLASH_LITE_RPD:-1500}
       # Rate limit wait settings for intelligent model selection
       GEMINI_MAX_WAIT_SECONDS: ${GEMINI_MAX_WAIT_SECONDS:-40}
 
@@ -86,7 +86,7 @@ services:
       # Debug flag for imports
       PYTHONDEBUG: "1"
       # Step Execution Control
-      RUN_PHASE_1_STEPS: ${RUN_PHASE_1_STEPS:-false} # Master switch for steps 1-4
+      RUN_PHASE_1_STEPS: ${RUN_PHASE_1_STEPS:-true} # Master switch for steps 1-4
       RUN_STEP1: ${RUN_STEP1:-true} # Controls Step 1
       RUN_STEP2: ${RUN_STEP2:-true} # Controls Step 2 (Clustering)
       RUN_STEP3: ${RUN_STEP3:-true} # Controls Step 3 (Entity Extraction)
